--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,12 +2,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%= EJSData[0] %></title>
+    <title><%= title %></title>
     <link rel="stylesheet" href="css/styles.css" />
   </head>
 
   <body>
-    <h1><%= EJSData[1] %></h1>
+    <h1><%= topicH1 %></h1>
     <h2>Welcome to browse news and articles</h2>
   </body>
 </html>
