Add basic structure for frontend

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,13 +1,23 @@
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/path/to/your/styles.css" />
   </head>
-
   <body>
-    <h1><%= topicH1 %></h1>
-    <h2>Welcome to browse news and articles</h2>
+    <div class="wrapper">
+      <!-- Header -->
+      <%- include('partials/header') %>
+
+      <!-- Content: Navbar + Main -->
+      <div class="content">
+        <%- include('partials/navbar') %> <%- include('partials/main') %>
+      </div>
+
+      <!-- Footer -->
+      <%- include('partials/footer') %>
+    </div>
   </body>
 </html>
