--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,7 +1,9 @@
 <nav class="navbar">
-  <ul>
+  <ul class="navbar_items">
     <li><a href="/">Home</a></li>
-    <li><a href="/about">About</a></li>
-    <li><a href="/contact">Contact</a></li>
+    <li><a href="/api/getAll">List all links</a></li>
+    <li><a href="/update on client side">Show one link</a></li>
+    <li><a href="/update on client side">Add new link</a></li>
+    <li><a href="/update on client side">Delete link</a></li>
   </ul>
 </nav>
