--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -2,8 +2,7 @@
   <ul class="navbar_items">
     <li><a href="/">Home</a></li>
     <li><a href="/api/getAll">List all links</a></li>
-    <li><a href="/update on client side">Show one link</a></li>
     <li><a href="/update on client side">Add new link</a></li>
-    <li><a href="/update on client side">Delete link</a></li>
+    <li><a href="/update on client side">App in GitHub</a></li>
   </ul>
 </nav>
