Dynamic rendering of main components content

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -13,7 +13,7 @@
 
       <!-- Content: Navbar + Main -->
       <div class="content">
-        <%- include('partials/navbar') %> <%- include('partials/main') %>
+        <%- include('partials/navbar') %> <%- include('partials/main', {content: content}) %>
       </div>
 
       <!-- Footer -->
