--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -1,8 +1,12 @@
 <nav class="navbar">
   <ul class="navbar_items">
     <li><a href="/">Home</a></li>
-    <li><a href="/api/getAll">List all links</a></li>
+    <li id="list-all-links-button"><a href="#">List all links</a></li>
     <li><a href="/update on client side">Add new link</a></li>
-    <li><a href="/update on client side">App in GitHub</a></li>
+    <li>
+      <a href="https://github.com/T-0n-1/link-bank" target="_blank"
+        >App in GitHub</a
+      >
+    </li>
   </ul>
 </nav>
