--- a/src/views/partials/main.ejs
+++ b/src/views/partials/main.ejs
@@ -1,6 +1,3 @@
 <main class="main">
-  <section>
-    <h2>Main Content Area</h2>
-    <p>This is where your main content goes.</p>
-  </section>
+  <section><%- content %></section>
 </main>
