BUG fetch not working from client side

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -19,5 +19,6 @@
       <!-- Footer -->
       <%- include('partials/footer') %>
     </div>
+    <script src="js/frontendScript.js"></script>
   </body>
 </html>
