--- a/src/views/list.ejs
+++ b/src/views/list.ejs
@@ -13,7 +13,8 @@
 
       <!-- Content: Navbar + Main -->
       <div class="content">
-        <%- include('partials/navbar') %> <%- include('partials/main') %>
+        <%- include('partials/navbar') %> <%- include('partials/listMain.ejs', { links: links })
+        %>
       </div>
 
       <!-- Footer -->
