--- a/src/views/partials/main.ejs
+++ b/src/views/partials/main.ejs
@@ -1,5 +1,5 @@
 <main class="main">
-  <section>
+  <section class="scrollable">
     <h2>Welcome to home of tech related links</h2>
     <p>Click the links to interact with app:</p>
     <ul>
