--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -140,3 +140,11 @@ body {
   margin-bottom: 1.94%;
   text-decoration: none;
 }
+
+button {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  margin-top: -3%;
+  margin-bottom: 3%;
+  margin-right: 0.7%;
+}
