--- a/src/views/partials/listMain.ejs
+++ b/src/views/partials/listMain.ejs
@@ -1,5 +1,5 @@
 <main class="main">
-  <section class="scrollable">
+  <section>
     <h2>List of links</h2>
     <ul id="link_list">
       <% if (links && links.length > 0) { %>
