Add EJS partials for editing link

--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -13,7 +13,7 @@
 
       <!-- Content: Navbar + Main -->
       <div class="content">
-        <%- include('partials/navbar') %> <%- include('partials/editMain.ejs', { links: links, url: url })
+        <%- include('partials/navbar') %> <%- include('partials/editMain.ejs', { editable: editable })
         %>
       </div>
 
