--- a/src/views/partials/editMain.ejs
+++ b/src/views/partials/editMain.ejs
@@ -1,6 +1,6 @@
 <main class="main">
   <section>
-    <h2>Welcome to home of tech related links</h2>
+    <h2>Edit Link</h2>
     <form class="edit-form" id="editForm" onsubmit="submitEdit(event)">
       <label>
         Link Text:
