--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= title %></title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
     <div class="wrapper">
@@ -20,6 +20,6 @@
       <!-- Footer -->
       <%- include('partials/footer') %>
     </div>
-    <script src="js/frontendScript.js"></script>
+    <script src="/js/frontendScript.js"></script>
   </body>
 </html>
