--- a/src/views/partials/listMain.ejs
+++ b/src/views/partials/listMain.ejs
@@ -5,7 +5,7 @@
       <% if (links && links.length > 0) { %>
         <% links.forEach(element => { %>
           <li class="link_list_item"><%= element.id %>: <%= element.linkName %> ( <a href="<%= element.link %>" target="_blank"><%= element.link %></a> ) <%= element.description %></a></li>
-          <button onclick="window.location.href='/api/edit/<%= element.id %>'" role="link">Edit link</button><button onclick="deleteItem(`[<%= url %>, <%= element.id %>]`)">Delete link</button>
+          <button onclick="editItem(`<%= element.id %>`)">Edit link</button><button onclick="deleteItem(`[<%= url %>, <%= element.id %>]`)">Delete link</button>
         <% }) %>
       <% } else { %>
         <p>No links available at the moment.</p>
