Working edit link component

--- a/src/views/partials/editMain.ejs
+++ b/src/views/partials/editMain.ejs
@@ -4,7 +4,7 @@
     <form class="edit-form" id="editForm" onsubmit="submitEdit(event)">
       <input type="hidden" id="editId" value="<%= editable.id %>" />
       <label>
-        Link Text:
+        Link Name:
         <input
           type="text"
           id="editText"
