Ready add link component

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -4,7 +4,7 @@
     <li>
       <a href="/api/links">List all links</a>
     </li>
-    <li><a href="/update on client side">Add new link</a></li>
+    <li><a href="/api/new">Add new link</a></li>
     <li>
       <a href="https://github.com/T-0n-1/link-bank" target="_blank"
         >App in GitHub</a
