--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,7 +29,6 @@ body {
   margin: 0;
   padding: 0;
   max-height: 100vh;
-  /* overflow-y: hidden; */
   font-family:
     system-ui,
     -apple-system,
@@ -46,13 +45,73 @@ body {
 
 .wrapper {
   display: flex;
-  flex-direction: column; /* Default for portrait */
-  /* flex-grow: 1; */
+  flex-direction: column;
   height: 100vh;
 }
 
+/* General styles */
+.header,
+.footer {
+  padding: 1rem;
+  background-color: #f8f9fa;
+  text-align: center;
+}
+
+.navbar {
+  background-color: #343a40;
+  color: #fff;
+  padding: 1rem;
+}
+
 .main {
+  flex-grow: 1;
+  padding: 1rem;
+  background-color: #e9ecef;
+  height: 100%;
   overflow-y: auto;
+}
+
+.footer {
+  background-color: #6c757d;
+  color: #fff;
+}
+
+li > p {
+  margin-top: 1.2%;
+  margin-bottom: 2.2%;
+}
+
+#link_list li {
+  margin-bottom: 1.94%;
+  text-decoration: none;
+}
+
+button {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  margin-top: -3%;
+  margin-bottom: 3%;
+  margin-right: 0.7%;
+}
+
+.edit-form label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.edit-form input,
+.edit-form textarea {
+  display: block;
+  margin-bottom: 20px;
+  width: 90%;
+  padding: 8px;
+  font-size: 16px;
+}
+
+.edit-form button {
+  margin-right: 10px;
+  padding: 10px 15px;
+  font-size: 16px;
 }
 
 .content {
@@ -108,69 +167,9 @@ body {
   .navbar_items li {
     margin-bottom: 35%;
   }
-}
 
-/* General styles */
-.header,
-.footer {
-  padding: 1rem;
-  background-color: #f8f9fa;
-  text-align: center;
-}
-
-.navbar {
-  background-color: #343a40;
-  color: #fff;
-  padding: 1rem;
-}
-
-.main {
-  flex-grow: 1;
-  padding: 1rem;
-  background-color: #e9ecef;
-  height: 100%;
-}
-
-.footer {
-  background-color: #6c757d;
-  color: #fff;
-}
-
-li > p {
-  margin-top: 1.2%;
-  margin-bottom: 2.2%;
-}
-
-#link_list li {
-  margin-bottom: 1.94%;
-  text-decoration: none;
-}
-
-button {
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-  margin-top: -3%;
-  margin-bottom: 3%;
-  margin-right: 0.7%;
-}
-
-.edit-form label {
-  display: block; /* Ensure each label occupies a full line */
-  margin-bottom: 10px; /* Space between label and its input */
-}
-
-.edit-form input,
-.edit-form textarea {
-  display: block; /* Ensure inputs occupy a full line */
-  margin-bottom: 20px; /* Add space between inputs */
-  width: 100%; /* Make inputs take the full width of the container */
-  max-width: 500px; /* Optional: Limit the maximum width */
-  padding: 8px; /* Add some padding inside the input */
-  font-size: 16px; /* Improve readability */
-}
-
-.edit-form button {
-  margin-right: 10px; /* Add space between the Save and Cancel buttons */
-  padding: 10px 15px; /* Add padding for better clickability */
-  font-size: 16px; /* Consistent font size */
+  .edit-form input,
+  .edit-form textarea {
+    width: 70%;
+  }
 }
