--- a/src/views/partials/editMain.ejs
+++ b/src/views/partials/editMain.ejs
@@ -1,10 +1,16 @@
 <main class="main">
   <section>
-    <h2>Edit Link</h2>
-    <form class="edit-form" id="editForm" onsubmit="submitEdit(event)">
-      <input type="hidden" id="editId" value="<%= editable.id %>" />
+    <h2><%= editable.id ? "Edit Link" : "Add New Link" %></h2>
+    <form
+      class="edit-form"
+      id="editForm"
+      onsubmit="<%= editable.id ? 'submitEdit(event)' : 'submitNew(event)' %>"
+    >
+      <% if (editable.id) { %>
+        <input type="hidden" id="editId" value="<%= editable.id %>" />
+      <% } %>
       <label>
-        Link Name:
+        Link Text:
         <input
           type="text"
           id="editText"
@@ -13,7 +19,6 @@
           value="<%= editable.linkName %>"
         />
       </label>
-      <br />
       <label>
         Link URL:
         <input
@@ -24,16 +29,15 @@
           value="<%= editable.link %>"
         />
       </label>
-      <br />
       <label>
         Link Description:
-        <textarea id="editDescription" rows="3" maxlength="2048">
-<%= editable.description %></textarea
-        >
+        <textarea
+          id="editDescription"
+          rows="3"
+          maxlength="2048"
+        ><%= editable.description %></textarea>
       </label>
-
-      <br />
-      <button type="submit">Save</button>
+      <button type="submit"><%= editable.id ? "Save Changes" : "Add Link" %></button>
       <button type="button" onclick="cancelEdit()">Cancel</button>
     </form>
   </section>
